--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "node-red-contrib-iot-virtual-device":"0.x",
         "node-red-contrib-ibmpush":"0.x",
         "node-red-contrib-bluemix-hdfs":"0.x",
-        "node-red-contrib-admin":"0.x"
+        "node-red-contrib-admin":"0.x",
+        "node-red-node-tmf-api-beta":"0.1.3"
     },
     "scripts": {
         "start": "node --max-old-space-size=384 node_modules/node-red/red.js --settings ./bluemix-settings.js -v"
